# wasmer-interface-fuzzing

./: README.md
PoC/: crash-68162851b3a399eb1e27b9d20a7b4c278896995f  crash-916cbace3f6dbb4b727e3ea2c607b5df90f4fe38  panic_assertion_failed
deserialize-buffer-fuzz/: Cargo.toml
deserialize-buffer-fuzz/fuzz/: Cargo.toml
deserialize-buffer-fuzz/fuzz/fuzz_targets/: deserialize_buffer.rs
fuzzing_multi_version/wasmer-2.3.0/fuzz/: Cargo.toml
fuzzing_multi_version/wasmer-2.3.0/fuzz/fuzz_targets/: universal_cranelift_raw.rs
fuzzing_multi_version/wasmer-3.1.1/fuzz/: Cargo.toml
fuzzing_multi_version/wasmer-3.1.1/fuzz/fuzz_targets/: universal_cranelift_raw.rs
grammar-based-fuzz/wasm-domato/jscript/: test
grammar-based-fuzz/wasm-domato/webassembly/: README.md  generator.py  split.sh  template.wat  test  wasm.txt  wasm_grammar.txt
new-fuzz-drivers/wasm-tools-code/crates/wasm-smith/src/: core.rs
new-fuzz-drivers/wasm-tools-data/crates/wasm-smith/src/: core.rs
new-fuzz-drivers/wasm-tools-elem/crates/wasm-smith/src/: core.rs
wasm-grammar-fuzz/: generator.py  template.html  wasm.txt  webassembly.txt
wasm_testcases/: escrow_loop.wasm  escrow_original.wasm
wasmer-2.3.0/examples/: compiler_cranelift.rs
wasmer-2.3.0/fuzz/: Cargo.toml  stack_trace
wasmer-2.3.0/fuzz/fuzz_targets/: universal_cranelift.rs  universal_cranelift_func_elem_code_data.rs  universal_cranelift_raw.rs  universal_cranelift_tags.rs
wasmvm-fuzz/fuzz/: Cargo.toml
wasmvm-fuzz/fuzz/fuzz_targets/: fuzz_target_1.rs
wasmvm-fuzz/src/: tests.rs
(+30 files in other folders)
