[package]
name = "deserialize-buffer-fuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
parity-wasm = "0.45.0"

[dependencies.deserialize-buffer-fuzz]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[[bin]]
name = "deserialize_buffer"
path = "fuzz_targets/deserialize_buffer.rs"
test = false
doc = false
