[package]
name = "wasmvm-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cosmwasm-std = { version = "0.13.0", features = ["iterator"]}
cosmwasm-vm = { version = "0.13.0", features = ["iterator"] }
errno = "0.2"
serde_json = "1.0"
thiserror = "1.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.1.0"


[dependencies.wasmvm]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
